Fixed alignment and padding issues on the landing page. Implemented links for publications and talks thumbnails. Added additional content to each talk detailing presenter location and date.

--- a/website/static/website/css/landing.css
+++ b/website/static/website/css/landing.css
@@ -17,3 +17,16 @@ h1{
     text-transform: none;
     font-variant: normal;
 }
+
+.page-link{
+    margin: 0;
+    text-align: left;
+}
+
+.landing-talk-fix{
+    margin: 0;
+}
+
+.landing-talk-fix img{
+    margin: 0;
+}
