--- a/website/static/website/css/news.css
+++ b/website/static/website/css/news.css
@@ -128,6 +128,7 @@
 }
 
 .news-type-label {
+    padding-top: 5px;
     text-align: left;
     margin: 0 auto;
 }
